--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       </details>
 
       <details>
-        <summary class="custom-summary text-gray-800 px-2.5">
+        <summary class="custom-summary text-gray-800 px-2.5 whitespace-nowrap">
           <i class="ph-bold ph-greater-than arrow-icon"></i>
-          <span class="title">CONTEÚDO COMPLEMENTAR</span>
+          <span class="title-main">CONTEÚDO COMPLEMENTAR</span>
         </summary>
         <a class="course-index" href="#">Unidade 1: Introdução ao Desenvolvimento Web 💻</a>
         <a class="course-index" href="#">Esta é a nossa primeira unidade de conteúdo!Primei...</a>
@@ -108,37 +108,297 @@
             <i class="ph-bold ph-greater-than arrow-icon"></i>
             <span class="title">Exercícios de HTML e CSS</span>
           </summary>
-          <label class="flex items-center gap-2 questionario">
+          <label class="flex items-center gap-2 subtopic">
             <input type="radio" class="w-4 h-4 m-0 p-0 box-content">
             <a class="topic-modulo" href="#">Questionário 1</a>
           </label>
-          <label class="flex items-center gap-2 questionario">
-            <input type="radio" class="w-4 h-4 m-0 p-0 box-content">
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
             <a class="topic-modulo" href="#">Questionário 2</a>
           </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content">
+            <a class="topic-modulo" href="#">Atividade 01</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content">
+            <a class="topic-modulo" href="#">Atividade 02</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content">
+            <a class="topic-modulo" href="#">Instruções para o Desafio de HTML do Free Code
+              Camp</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Atividade Prática: Criando um Portfólio Simples</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Atividade de CSS</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Continuação da atividade - Desafio 2: Aplicando Flexbox</a>
+          </label> <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Questionário</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Introdução ao Git e GitHub</a>
+          </label>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 px-2.5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">Exercícios de Javascript</span>
+          </summary>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Mini Projeto JavaScript - Parte 1</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Mini Projeto JavaScript - Parte 2</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Mini Projeto JavaScript - Parte 3</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Mini Projeto JavaScript - Parte 4</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Mini Projeto JavaScript - Parte 5</a>
+          </label>
+          <label class="flex items-center gap-2 subtopic">
+            <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+            <a class="topic-modulo" href="#">Final do Mini Projeto de JavaScript</a>
+          </label>
+          </details>
+          <details>
+            <summary class="custom-summary text-gray-800 px-2.5 modulo">
+              <i class="ph-bold ph-greater-than arrow-icon"></i>
+              <span class="title">Exercícios de React</span>
+            </summary>
+            <label class="flex items-center gap-2 subtopic">
+              <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+              <a class="topic-modulo" href="#">Exercício de Fixação</a>
+            </label>
+            <label class="flex items-center gap-2 subtopic">
+              <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+              <a class="topic-modulo" href="#">Exercício de Fixação</a>
+            </label>
+            <label class="flex items-center gap-2 subtopic">
+              <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+              <a class="topic-modulo" href="#">Criando um Formulário de Feedback com useState</a>
+            </label>
+            <label class="flex items-center gap-2 subtopic">
+              <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+              <a class="topic-modulo" href="#">Atividade de Fixação: Rotas e Componentes em React</a>
+            </label>
+            <label class="flex items-center gap-2 subtopic">
+              <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+              <a class="topic-modulo" href="#">Atividade de Fixação: Estilização e Interatividade com CSS em React</a>
+            </label>
+            <label class="flex items-center gap-2 subtopic">
+              <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+              <a class="topic-modulo" href="#">Criando uma Mini Loja Virtual com PrimeReact e Axios</a>
+            </label>
+            </details>
+            <details>
+              <summary class="custom-summary text-gray-800 px-2.5 modulo">
+                <i class="ph-bold ph-greater-than arrow-icon"></i>
+                <span class="title">Exercícios de Back-end</span>
+              </summary>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Introdução ao Node.js e Express</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Criação de Rotas Simples</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              <label class="flex items-center gap-2 subtopic">
+                <input type="radio" class="w-4 h-4 m-0 p-0 box-content invisible">
+                <a class="topic-modulo" href="#">Atividade do Dia!</a>
+              </label>
+              </details>
+      </details>
+
+      <details>
+        <summary class="custom-summary text-gray-800 px-2.5">
+          <i class="ph-bold ph-greater-than arrow-icon"></i>
+          <span class="title-main">TURMA ALDEOTA</span>
+        </summary>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT09</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT10</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT11</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT12</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT13</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT14</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT15</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT16</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT17</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT18</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT19</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
         </details>
       </details>
 
       <details>
         <summary class="custom-summary text-gray-800 px-2.5">
           <i class="ph-bold ph-greater-than arrow-icon"></i>
-          <span class="title">TURMA ALDEOTA</span>
+          <span class="title-main">TURMA SUL</span>
         </summary>
-      </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT07</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT08</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT09</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT10</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 ml-5 modulo">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title">GT11</span><i class="ph-fill ph-lock-simple"></i>
+          </summary>
+        </details>
+        </details>
+        <details>
+          <summary class="custom-summary text-gray-800 px-2.5">
+            <i class="ph-bold ph-greater-than arrow-icon"></i>
+            <span class="title-main">TURMA BEZERRA</span>
+          </summary>
+          <details>
+            <summary class="custom-summary text-gray-800 ml-5 modulo">
+              <i class="ph-bold ph-greater-than arrow-icon"></i>
+              <span class="title">GT01</span><i class="ph-fill ph-lock-simple"></i>
+            </summary>
+          </details>
+          <details>
+            <summary class="custom-summary text-gray-800 ml-5 modulo">
+              <i class="ph-bold ph-greater-than arrow-icon"></i>
+              <span class="title">GT02</span><i class="ph-fill ph-lock-simple"></i>
+            </summary>
+          </details>
+          <details>
+            <summary class="custom-summary text-gray-800 ml-5 modulo">
+              <i class="ph-bold ph-greater-than arrow-icon"></i>
+              <span class="title">GT03</span><i class="ph-fill ph-lock-simple"></i>
+            </summary>
+          </details>
+        </details>
 
-      <details>
-        <summary class="custom-summary text-gray-800 px-2.5">
-          <i class="ph-bold ph-greater-than arrow-icon"></i>
-          <span class="title">TURMA SUL</span>
-        </summary>
-      </details>
-
-      <details>
-        <summary class="custom-summary text-gray-800 px-2.5">
-          <i class="ph-bold ph-greater-than arrow-icon"></i>
-          <span class="title">TURMA BEZERRA</span>
-        </summary>
-      </details>
     </div>
 
   </aside>
